# work_smarter

./: doxygen_config  to_habitualize
c++_collection/necessary/: a.out  number_decimal.cpp
dot_example/: behzad_readme  my_dot.dot
git_hub_collection/: learning  learning~
mac_collection/: mac_commands_helpfull
notes/: misc  paths
python_collection/: ;  knowlege.py  map.py
python_collection/figures/: simple_plot.py
python_collection/necessary/: balh  behzad_readme.txt  blah  blah.py  codeCompletion.txt  complete_create_db.py  db_create_table_python_IP.py  db_misc.py  db_retrieve_table_python_IP.py  find_python_path.py  gen_pycallgraph_excluding_libs.py  history.py  kmeans.py  list_all_files_in_a_folder.py  now  parse.py  send_email.py  test
python_collection/practice/: GA_practice.py  behzad_readme.txt  blah.py  collection_handling.py  db_insert_to_table_example.py  deap_example.py  exception_examplepy  func_scope.py  generator.py  iterator.py  itertools.py  map.py  parallel.py  parsing_a_file.py  pickle_example.py  plot.py  plot3d.py  quality_noise_plot.py  symbolicEquations.py  sympy_example.py  sympy_example2.py  tags
unix_collection/: getting_time  unix_commands_helpfull
unix_collection/adminstrative_stuff/cmake_example/: CMakeLists.txt  behzad_readme  makefile
unix_collection/adminstrative_stuff/cmake_example/build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  myapp
unix_collection/adminstrative_stuff/cmake_example/my_src/: test1.cpp  test2.cpp
vim_collection/: learningVim  vi_keybindings_in_bash  vim_todo
(+35 files in other folders)
